--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.8",
+    "knex-migrate": "^1.7.4",
     "pg": "^8.4.2"
   },
   "devDependencies": {
