--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "pg": "^8.4.2"
   },
   "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.6"
   }
 }
