--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "start-auto": "nodemon app.js",
+    "format": "npx prettier --single-quote --write  'src/**/*.{js,ts,json}'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
